記事のカバー画像の配置方法を修正

--- a/themes/icarus/include/style/helper.styl
+++ b/themes/icarus/include/style/helper.styl
@@ -160,3 +160,8 @@ for n in (0 .. 5)
         object-fit: cover
         width: 100% !important
         height: 100% !important
+
+    .cover
+        object-fit: cover
+        object-position: left
+        width: 100% !important
