記事のカバー画像のレイアウトを調整できるように改修

--- a/themes/icarus/include/style/helper.styl
+++ b/themes/icarus/include/style/helper.styl
@@ -161,7 +161,7 @@ for n in (0 .. 5)
         width: 100% !important
         height: 100% !important
 
-    .cover
+    .left-top-fill-width
         object-fit: cover
-        object-position: left
+        object-position: left top
         width: 100% !important
