--- a/themes/icarus/include/style/article.styl
+++ b/themes/icarus/include/style/article.styl
@@ -138,7 +138,31 @@ article
 
                 .message-body
                     border: none
-        
+
+            .link-area
+                box-shadow: 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12), 0 5px 5px -3px rgba(0, 0, 0, 0.2)
+                margin: 1rem 0 1rem 0
+                font-size: 0.825rem
+                border-radius: $link-card-radius
+
+                .og-image
+                    img
+                        overflow: hidden
+                        max-height: 270px
+                        border-top-left-radius: $link-card-radius
+                        border-top-right-radius: $link-card-radius
+                        object-fit: cover
+                        object-position: center;
+                        width: 100% !important
+                        height: 100% !important
+
+                .descriptions
+                    padding: 0.25rem 1rem 0.5rem 1rem
+
+                    .og-title
+                        font-size: 1.375rem
+                        margin-bottom: 0.25rem
+
         .article-tags
             display: flex
             flex-wrap: wrap
