--- a/themes/icarus/include/style/base.styl
+++ b/themes/icarus/include/style/base.styl
@@ -40,6 +40,8 @@ $card-radius ?= $radius
 $card-media-margin ?= 0.75rem
 $card-shadow ?= $shadow, 0 0 1px rgba(0, 0, 0, 0.1)
 
+$link-card-radius ?= 8px
+
 $menu-item-active-color ?= $link
 $menu-item-active-background-color ?= hsl(219, 70%, 96%)
 
@@ -87,13 +89,13 @@ body > .section
 
     ::-webkit-scrollbar-track
         border-radius: 3px
-        background: rgba(0,0,0,0.06)
-        box-shadow: inset 0 0 5px rgba(0,0,0,0.1)
+        background: rgba(0, 0, 0, 0.06)
+        box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.1)
 
     ::-webkit-scrollbar-thumb
         border-radius: 3px
-        background: rgba(0,0,0,0.12)
-        box-shadow: inset 0 0 10px rgba(0,0,0,0.2)
+        background: rgba(0, 0, 0, 0.12)
+        box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.2)
 
     ::-webkit-scrollbar-thumb:hover
-        background: rgba(0,0,0,0.24)
+        background: rgba(0, 0, 0, 0.24)
