リンクプレビュープラグインのリファクタに合わせて記事及びスタイルの修正

--- a/themes/icarus/include/style/article.styl
+++ b/themes/icarus/include/style/article.styl
@@ -139,8 +139,8 @@ article
                 .message-body
                     border: none
 
-            .link-area
-                display: flex
+            .link-preview
+                display: block
                 border: 1px solid #cbd0d3
                 border-radius: $link-card-radius
                 margin: 1rem 0 1rem 0
