インデックスページの表示件数変更及びh2とh3のレイアウト修正

--- a/themes/icarus/include/style/article.styl
+++ b/themes/icarus/include/style/article.styl
@@ -60,7 +60,7 @@ article
             h2
                 font-size: 1.5rem
                 position: relative
-                margin: 1rem 0 1rem -32px
+                margin: 1rem -8px 1rem -32px
                 padding: 1rem
                 color: #3273dc
                 border-radius: 0 100vh 100vh 0
@@ -83,7 +83,6 @@ article
                 position: relative
                 margin-top: 0.5rem
                 margin-left: 0.75rem
-                margin-right: 1.5rem
                 padding: 1rem 0 1rem 1rem
                 color: #00947a
                 background: #e8ece9
