--- a/themes/icarus/include/style/base.styl
+++ b/themes/icarus/include/style/base.styl
@@ -9,6 +9,8 @@ $body-background-color ?= #f7f7f7
 $family-sans-serif ?= Ubuntu, Roboto, 'Open Sans', sans-serif
 $family-code ?= 'Source Code Pro', monospace
 
+$text-light ?= #595959
+
 $size-7 ?= .85rem
 $size-small ?= .75rem
 
@@ -42,7 +44,7 @@ $card-shadow ?= $shadow, 0 0 1px rgba(0, 0, 0, 0.1)
 
 $link-card-radius ?= 8px
 
-$menu-item-active-color ?= $link
+$menu-item-active-color ?= #184ea0
 $menu-item-active-background-color ?= hsl(219, 70%, 96%)
 
 $content-heading-weight ?= $weight-normal
