--- a/themes/icarus/include/style/plugin.styl
+++ b/themes/icarus/include/style/plugin.styl
@@ -25,7 +25,7 @@
  * --------------------------------- */
 .gallery-item
     .caption
-        color: $grey
+        color: $text-light
 
 /* ---------------------------------
  *      Page Loading Progressbar
