--- a/themes/icarus/include/style/pagination.styl
+++ b/themes/icarus/include/style/pagination.styl
@@ -3,7 +3,7 @@
  * --------------------------------- */
 $pagination-box-shadow ?= $card-shadow
 $pagination-background-color ?= $button-background-color
-$post-navigation-fg ?= $grey
+$post-navigation-fg ?= #545454
 
 .pagination
     @extend .pagination.is-centered
@@ -15,12 +15,14 @@ $post-navigation-fg ?= $grey
     .pagination-next
         a
             color: $pagination-color
+
     .pagination-link,
     .pagination-previous,
     .pagination-next
         border: none
         background: $pagination-background-color
         box-shadow: $pagination-box-shadow
+
     .pagination-link.is-current
         background: $pagination-current-background-color
 
@@ -28,5 +30,6 @@ $post-navigation-fg ?= $grey
     color: $post-navigation-fg
     flex-wrap: wrap
     justify-content: space-around
+
     .level-item
         margin-bottom: 0
