インデックスページのレイアウト変更
タイトルとメタ情報を入れ替え
メタ情報のスタイル修正
記事の本文をリンク化
続きを読むボタンを表示しない

--- a/themes/icarus/include/style/article.styl
+++ b/themes/icarus/include/style/article.styl
@@ -45,7 +45,7 @@ article
 
         .article-meta
             overflow-x: auto
-            margin-bottom: .5rem
+            margin-bottom: 1.5rem
 
         .article-more
             @extend .button.is-light
