ヘッダリンクに下線をつけるように改修

--- a/themes/icarus/include/style/base.styl
+++ b/themes/icarus/include/style/base.styl
@@ -101,3 +101,6 @@ body > .section
 
     ::-webkit-scrollbar-thumb:hover
         background: rgba(0, 0, 0, 0.24)
+
+a.underline
+    text-decoration: underline solid
