infoメッセージボックスのカラーコントラスト比を修正

--- a/themes/icarus/include/style/article.styl
+++ b/themes/icarus/include/style/article.styl
@@ -142,6 +142,16 @@ article
                 .message-body
                     border: none
 
+            .message.is-info
+                background-color: #f3f6fc
+
+                .message-header
+                    color: #3b3b3b
+                    background-color: #a6d2f7
+
+                .message-body
+                    color: #145785
+
             .link-preview
                 display: block
                 border: 1px solid #cbd0d3
