--- a/themes/icarus/include/style/article.styl
+++ b/themes/icarus/include/style/article.styl
@@ -156,6 +156,16 @@ article
                 .message-body
                     color: #145785
 
+            .message.is-warning
+                background-color: #fff6d6
+
+                .message-header
+                    color: #3b3b3b
+                    background-color: #ffdd57
+
+                .message-body
+                    color: #665200
+
             .link-preview
                 display: block
                 border: 1px solid #cbd0d3
