記事のタイトルの下にカテゴリを配置するようにレイアウトを変更

--- a/themes/icarus/include/style/article.styl
+++ b/themes/icarus/include/style/article.styl
@@ -40,10 +40,14 @@ article
                 line-height: inherit
 
     &.article
-        .article-meta, .article-tags
+        .article-meta, .article-tags, .article-categories
             color: $text-light
 
         .article-meta
+            overflow-x: auto
+            margin-bottom: .5rem
+
+        .article-categories
             overflow-x: auto
             margin-bottom: 1.5rem
 
