サイト全体の文字サイズレベルを定義及び反映

--- a/themes/icarus/include/style/base.styl
+++ b/themes/icarus/include/style/base.styl
@@ -11,8 +11,19 @@ $family-code ?= 'Source Code Pro', monospace
 
 $text-light ?= #595959
 
-$size-7 ?= .85rem
-$size-small ?= .75rem
+$size-1 ?= 2.00rem // 28px
+$size-2 ?= 1.72rem // 24px
+$size-3 ?= 1.50rem // 21px
+$size-4 ?= 1.29rem // 18px
+$size-5 ?= 1.15rem // 16px
+$size-5_5 ?= 1.072rem // 15px
+$size-6 ?= 1.00rem // 14px
+$size-7 ?= 0.86rem // 12px
+
+$size-large ?= $size-1
+$size-medium ?= $size-3
+$size-normal ?= $size-6
+$size-small ?= $size-7
 
 $primary ?= $blue
 $custom-colors ?= {
@@ -43,6 +54,9 @@ $card-media-margin ?= 0.75rem
 $card-shadow ?= $shadow, 0 0 1px rgba(0, 0, 0, 0.1)
 
 $link-card-radius ?= 8px
+
+$menu-label-font-size ?= $size-small
+$menu-label-color ?= $text-light
 
 $menu-item-active-color ?= #184ea0
 $menu-item-active-background-color ?= hsl(219, 70%, 96%)
