--- a/themes/icarus/include/style/article.styl
+++ b/themes/icarus/include/style/article.styl
@@ -1,12 +1,8 @@
 /* ---------------------------------
  *    Article Summary and Content
  * --------------------------------- */
-$article-font-size ?= 1.1rem
-
 article
     &.media
-        color: $text-light
-
         a
             color: inherit
 
@@ -56,13 +52,10 @@ article
 
         .content
             word-wrap: break-word
-            font-size: $article-font-size
-
-            h1
-                font-size: 1.75em
+            font-size: $size-5_5
 
             h2
-                font-size: 1.5rem
+                @extend .is-size-3
                 position: relative
                 margin: 1rem -8px 1rem -32px
                 padding: 1rem
@@ -83,7 +76,7 @@ article
                 border-left: 10px solid transparent
 
             h3
-                font-size: 1.25rem
+                @extend .is-size-4
                 position: relative
                 margin-top: 0.5rem
                 margin-left: 0.75rem
@@ -111,17 +104,17 @@ article
                 background: #005748
 
             h4
-                font-size: 1.125em
+                @extend .is-size-5
 
             h5
-                font-size: 1em
+                @extend .is-size-6
 
             p
                 a
                     text-decoration-line: underline
 
             pre
-                font-size: .85em
+                @extend .is-size-7
 
             code
                 padding: 0 0.25rem
