メッセージボックスのカラー設定方法を変更

--- a/themes/icarus/include/style/base.styl
+++ b/themes/icarus/include/style/base.styl
@@ -33,6 +33,21 @@ $custom-colors ?= {
     }
 }
 
+$info ?= #a6d2f7
+$info-invert ?= #3b3b3b
+$info-light ?= #f3f6fc
+$info-dark ?= #145785
+
+$warning ?= #ffdd57
+$warning-invert ?= #3b3b3b
+$warning-light ?= #fff6d6
+$warning-dark ?= #665200
+
+$success ?= #9ddcb3
+$success-invert ?= #3b3b3b
+$success-light ?= #f4fbf6
+$success-dark ?= #1f6136
+
 $navbar-item-active-color ?= $primary
 $footer-background-color ?= $scheme-main
 
