--- a/themes/icarus/include/style/footer.styl
+++ b/themes/icarus/include/style/footer.styl
@@ -15,6 +15,12 @@ footer.footer
                 justify-content: center
                 margin-top: 1rem
 
+        .button.is-large
+            svg
+                width: 2rem;
+                height: 2rem;
+                fill: $text
+
 .footer-logo
     img
         max-height: $logo-height
