--- a/themes/icarus/include/style/navbar.styl
+++ b/themes/icarus/include/style/navbar.styl
@@ -36,9 +36,17 @@ $navbar-item-margin-h ?= 0
         align-items: center
         padding: $navbar-item-padding-v $navbar-item-padding-h
         margin: $navbar-item-margin-v $navbar-item-margin-h
+        fill: $navbar-item-color
 
         &.is-active
             background-color: transparent
+
+        &:hover
+            fill: $primary
+
+        .nav-toc-icon, .nav-search-icon
+            width: $body-size
+            height: $body-size * $body-line-height
 
     +until($navbar-breakpoint)
         .navbar-menu
