--- a/themes/icarus/include/style/plugin.styl
+++ b/themes/icarus/include/style/plugin.styl
@@ -1,133 +1,29 @@
 /* ---------------------------------
  *        Back to Top Button
  * --------------------------------- */
-#back-to-top
-    position: fixed
-    opacity: 0
-    outline: none
-    padding: 8px 0
-    border-radius: $card-radius
-    transform: translateY(120px)
-    transition: .4s ease opacity, .4s ease width, .4s ease transform, .4s ease border-radius
-
-    &.is-rounded
-        border-radius: 50%
-
-    &.fade-in
-        opacity: 1
-
-    &.rise-up
-        transform: translateY(0)
-
-    svg
-        vertical-align: middle
-        width: $body-size
-        height: 24px
-        fill: $card-color
+@import 'plugins/back_to_top'
 
 /* ---------------------------------
  *          Gallery Plugin
  * --------------------------------- */
-.gallery-item
-    .caption
-        color: $text-light
+@import 'plugins/gallery'
 
 /* ---------------------------------
  *      Page Loading Progressbar
  * --------------------------------- */
-.pace
-    user-select: none
-    pointer-events: none
-
-    .pace-progress
-        top: 0
-        right: 100%
-        width: 100%
-        height: 2px
-        z-index: 2000
-        position: fixed
-        background: $primary
-
-.pace-inactive
-    display: none
+//@import 'plugins/progressbar'
 
 /* ---------------------------------
  *       Fix FontAwesome Icons
  * --------------------------------- */
-.fa, .fab, .fal, .far, .fas
-    line-height: inherit
+@import 'plugins/fix_fa_icons'
 
 /* ---------------------------------
  *       MathJax and KaTeX
  * --------------------------------- */
-.MathJax, .MathJax_Display, .MJXc-display, .MathJax_SVG_Display, .katex-display
-    overflow-x: auto
-    overflow-y: hidden
-
-.katex
-    white-space: nowrap
-
-.katex-display
-    margin-top: -1em !important
-
-.katex-html
-    padding-top: 1em
-
-    .tag
-        align-items: unset
-        background-color: unset
-        border-radius: unset
-        color: unset
-        display: unset
-        font-size: unset
-        height: unset
-        justify-content: unset
-        line-height: unset
-        padding-left: unset
-        padding-right: unset
-        white-space: unset
+//@import 'plugins/mathjax_katex'
 
 /* ---------------------------------
  *         Cookie Consent
  * --------------------------------- */
-.cc-window, .cc-revoke
-    font-size: 1.1rem !important
-    font-family: $family-sans-serif !important
-
-.cc-window
-    color: $text !important
-    background-color: $scheme-main !important
-
-    &.cc-floating
-        border-radius: $card-radius
-        box-shadow: $card-shadow
-
-    &.cc-banner
-        background-color: darken($scheme-main, 2.5%) !important
-
-    &.cc-theme-block, &.cc-theme-classic
-        .cc-compliance > .cc-btn
-            border-radius: $radius-rounded
-
-    .cc-compliance > .cc-btn
-        font-weight: 400
-        border: none
-        color: $primary-invert
-        background-color: $primary
-
-        &:hover, &:focus
-            background-color: darken($primary, 2.5%)
-
-        &.cc-deny
-            &:hover
-                color: $primary
-                text-decoration: none
-
-.cc-revoke
-    padding: .5rem 1rem !important
-    color: $primary-invert !important
-    background-color: $primary !important
-
-    &:hover
-        text-decoration: none !important
-        background-color: darken($primary, 2.5%)
+//@import 'plugins/cookie_consent'
