--- a/themes/icarus/source/css/style.styl
+++ b/themes/icarus/source/css/style.styl
@@ -9,6 +9,7 @@
 @import '../../include/style/navbar'
 @import '../../include/style/footer'
 @import '../../include/style/pagination'
+@import '../../include/style/post_navigation'
 @import '../../include/style/timeline'
 @import '../../include/style/search'
 @import '../../include/style/codeblock'
