--- a/themes/icarus/include/style/navbar.styl
+++ b/themes/icarus/include/style/navbar.styl
@@ -1,3 +1,5 @@
+@import bulma-stylus-root + '/components/navbar'
+
 /* ---------------------------------
  *           Top Navigation
  * --------------------------------- */
