--- a/themes/icarus/include/style/helper.styl
+++ b/themes/icarus/include/style/helper.styl
@@ -134,9 +134,11 @@ for n in (0 .. 5)
  * --------------------------------- */
 .link-muted
     color: inherit
+    fill: inherit
 
     &:hover
         color: $primary !important
+        fill: $primary !important
 
 /* ---------------------------------
  *          Image helpers
