--- a/themes/icarus/include/style/card.styl
+++ b/themes/icarus/include/style/card.styl
@@ -1,3 +1,5 @@
+@import bulma-stylus-root + '/components/card'
+
 /* ---------------------------------
  *              Card
  * --------------------------------- */
