--- a/themes/icarus/include/style/footer.styl
+++ b/themes/icarus/include/style/footer.styl
@@ -1,3 +1,5 @@
+@import bulma-stylus-root + '/layout/footer'
+
 /* ---------------------------------
  *            Page Footer
  * --------------------------------- */
@@ -20,6 +22,9 @@ footer.footer
                 width: 2rem;
                 height: 2rem;
                 fill: $text
+
+    .underline
+        text-decoration: underline solid
 
 .footer-logo
     img
