ファーストビューで使用しないCSSを分離

--- a/themes/icarus/include/style/style.styl
+++ b/themes/icarus/include/style/style.styl
@@ -1,20 +1,34 @@
 // Base CSS framework
 @import 'components/bulma-variables'
-@import 'components/bulma-imports'
-@import 'components/base'
+//@import bulma-stylus-root + '/utilities/animations'
+@import bulma-stylus-root + '/utilities/mixins'
+@import bulma-stylus-root + '/utilities/controls'
+@import bulma-stylus-root + '/components/breadcrumb'
+@import bulma-stylus-root + '/components/level'
+@import bulma-stylus-root + '/components/list'
+@import bulma-stylus-root + '/components/media'
+@import bulma-stylus-root + '/components/menu'
+@import bulma-stylus-root + '/elements/button'
+@import bulma-stylus-root + '/elements/box'
+@import bulma-stylus-root + '/elements/container'
+@import bulma-stylus-root + '/elements/content'
+@import bulma-stylus-root + '/elements/image'
+@import bulma-stylus-root + '/elements/tag'
+@import bulma-stylus-root + '/elements/title'
+@import bulma-stylus-root + '/form/tools'
+@import bulma-stylus-root + '/grid/columns'
+@import bulma-stylus-root + '/layout/section'
 // Helper classes & mixins
 @import 'components/helper'
 // Icarus components
-@import 'components/button'
+@import 'components/base'
 @import 'components/card'
 @import 'components/article'
 @import 'components/navbar'
-@import 'components/footer'
+@import 'components/widget'
+@import 'components/timeline'
+@import 'components/responsive'
+@import 'components/button'
 @import 'components/pagination'
 @import 'components/post_navigation'
-@import 'components/timeline'
-@import 'components/search'
-@import 'components/widget'
-//@import 'components/donate'
-@import 'components/plugin'
-@import 'components/responsive'
+@import 'components/footer'
