--- a/themes/icarus/include/style/components/bulma-variables.styl
+++ b/themes/icarus/include/style/components/bulma-variables.styl
@@ -6,8 +6,8 @@ bulma-stylus-root = '../../../../node_modules/bulma-stylus/stylus'
 $body-size ?= 14px
 $body-background-color ?= #f7f7f7
 
-$family-sans-serif ?= Ubuntu, Roboto, 'Open Sans', sans-serif
-$family-code ?= 'Source Code Pro', monospace
+$family-sans-serif ?= sans-serif
+$family-code ?= 'Source Code Pro', sans-serif
 
 $text-light ?= #595959
 
