--- a/themes/icarus/include/style/components/base.styl
+++ b/themes/icarus/include/style/components/base.styl
@@ -11,6 +11,7 @@ body
     min-height: 100%
     display: flex
     flex-direction: column
+    fill: $body-color
 
 body > .section
     flex-grow: 1
