ページ上部に戻るプラグインのみクリティカルCSSに移動

--- a/themes/icarus/include/style/components/plugin.styl
+++ b/themes/icarus/include/style/components/plugin.styl
@@ -1,7 +1,7 @@
 /* ---------------------------------
  *        Back to Top Button
  * --------------------------------- */
-@import 'plugins/back_to_top'
+//@import 'plugins/back_to_top'
 
 /* ---------------------------------
  *          Gallery Plugin
