--- a/themes/icarus/include/style/style.styl
+++ b/themes/icarus/include/style/style.styl
@@ -32,3 +32,4 @@
 @import 'components/pagination'
 @import 'components/post_navigation'
 @import 'components/footer'
+@import 'components/plugins/back_to_top'
