--- a/themes/icarus/include/style/components/article/post-navigation.styl
+++ b/themes/icarus/include/style/components/article/post-navigation.styl
@@ -7,6 +7,7 @@ $post-navigation-fg ?= #545454
     color: $post-navigation-fg
     flex-wrap: wrap
     justify-content: space-around
+    margin-top: 1.5rem
 
     .level-start,
     .level-end
