分割しなかったスタイルコンポーネントのリファクタ

--- a/themes/icarus/include/style/components/base.styl
+++ b/themes/icarus/include/style/components/base.styl
@@ -1,4 +1,9 @@
-@import bulma-stylus-root + '/base/_all'
+@import '../slim-bulma-stylus/base/minireset'
+@import '../slim-bulma-stylus/base/generic-basic'
+@import '../slim-bulma-stylus/base/helpers'
+@import '../slim-bulma-stylus/element/container'
+@import '../slim-bulma-stylus/layout/section'
+@import '../slim-bulma-stylus/grid/columns'
 
 html
     height: 100%
