--- a/themes/icarus/include/style/components/card.styl
+++ b/themes/icarus/include/style/components/card.styl
@@ -1,4 +1,4 @@
-@import bulma-stylus-root + '/components/card'
+@import '../slim-bulma-stylus/component/card'
 
 /* ---------------------------------
  *              Card
