--- a/themes/icarus/include/style/components/navbar.styl
+++ b/themes/icarus/include/style/components/navbar.styl
@@ -1,4 +1,4 @@
-@import bulma-stylus-root + '/components/navbar'
+@import '../slim-bulma-stylus/component/navbar'
 
 /* ---------------------------------
  *           Top Navigation
