--- a/themes/icarus/include/style/components/button.styl
+++ b/themes/icarus/include/style/components/button.styl
@@ -1,3 +1,5 @@
+@import '../slim-bulma-stylus/element/button'
+
 /* ---------------------------------
  *            Buttons
  * --------------------------------- */
