--- a/themes/icarus/include/style/style-secondary.styl
+++ b/themes/icarus/include/style/style-secondary.styl
@@ -1,5 +1,6 @@
 // Base CSS framework
-@import 'components/bulma-variables'
+bulma-stylus-root = '../../../../node_modules/bulma-stylus/stylus'
+@import 'slim-bulma-stylus/variables'
 @import bulma-stylus-root + '/utilities/mixins'
 @import bulma-stylus-root + '/utilities/controls'
 @import bulma-stylus-root + '/components/message'
