ウィジェットにあるタグのスタイルを修正

--- a/themes/icarus/include/style/components/widget/basic-card.styl
+++ b/themes/icarus/include/style/components/widget/basic-card.styl
@@ -43,15 +43,10 @@ article.media
             .level-left, .level-right, .level-item
                 flex-shrink: 1
 
-        .tag
-            background: $light-grey
-            color: $whites-invert
-
     .tags
+        .tag
+            margin-bottom: 0
+
         .tag:first-child
             background: $primary
             color: $primary-invert
-
-        .tag:last-child
-            background: $light-grey
-            color: $white-invert
