--- a/themes/icarus/include/style/pages/category.styl
+++ b/themes/icarus/include/style/pages/category.styl
@@ -11,6 +11,7 @@
 @import '../components/shared-imports/level-basic'
 @import '../components/shared-imports/tags'
 @import '../components/shared-imports/control'
+@import '../components/shared-imports/title'
 @import '../slim-bulma-stylus/component/breadcrumb'
 @import '../components/article/small-card'
 @import '../components/widget/basic-card'
