--- a/themes/icarus/include/style/pages/posts.styl
+++ b/themes/icarus/include/style/pages/posts.styl
@@ -11,6 +11,7 @@
 @import '../components/shared-imports/level-basic'
 @import '../components/shared-imports/tags'
 @import '../components/shared-imports/control'
+@import '../components/shared-imports/title'
 @import '../components/article/large-card'
 @import '../components/article/post-navigation'
 @import '../components/widget/toc-card'
