--- a/themes/icarus/include/style/pages/tags.styl
+++ b/themes/icarus/include/style/pages/tags.styl
@@ -11,6 +11,7 @@
 @import '../components/shared-imports/level-basic'
 @import '../components/shared-imports/tags'
 @import '../components/shared-imports/control'
+@import '../components/shared-imports/title'
 @import '../components/widget/basic-card'
 @import '../components/plugins/back_to_top'
 @import '../components/button'
