--- a/themes/icarus/include/style/components/article/large-card.styl
+++ b/themes/icarus/include/style/components/article/large-card.styl
@@ -11,11 +11,8 @@ $link-preview-card-contents-radius ?= $link-preview-card-radius - $link-preview-
 
 article.article
     .content
-        word-wrap: break-word
-        font-size: $size-5_5
-
         h2
-            @extend .is-size-3
+            font-size: $size-3
             position: relative
             margin: 1rem -8px 1rem -32px
             padding: 1rem
@@ -36,7 +33,7 @@ article.article
             border-left: 10px solid transparent
 
         h3
-            @extend .is-size-4
+            font-size: $size-4
             position: relative
             margin-top: 0.5rem
             margin-left: 0.75rem
@@ -64,17 +61,17 @@ article.article
             background: #005748
 
         h4
-            @extend .is-size-5
+            font-size: $size-5
 
         h5
-            @extend .is-size-6
+            font-size: $size-6
 
         p
             a
                 text-decoration-line: underline
 
         pre
-            @extend .is-size-7
+            font-size: $size-7
 
         code
             padding: 0 0.25rem
