ページネーションコンポーネントを追加

--- a/themes/icarus/include/style/pages/archive.styl
+++ b/themes/icarus/include/style/pages/archive.styl
@@ -14,6 +14,7 @@
 @import '../components/shared-imports/title'
 @import '../components/timeline'
 @import '../components/widget/basic-card'
+@import '../components/pagination'
 @import '../components/plugins/back_to_top'
 @import '../components/button'
 @import '../components/footer'
