--- a/themes/icarus/include/style/pages/category.styl
+++ b/themes/icarus/include/style/pages/category.styl
@@ -15,6 +15,7 @@
 @import '../slim-bulma-stylus/component/breadcrumb'
 @import '../components/article/small-card'
 @import '../components/widget/basic-card'
+@import '../components/pagination'
 @import '../components/plugins/back_to_top'
 @import '../components/button'
 @import '../components/footer'
