--- a/themes/icarus/include/style/pages/posts.styl
+++ b/themes/icarus/include/style/pages/posts.styl
@@ -16,6 +16,7 @@
 @import '../components/article/post-navigation'
 @import '../components/widget/toc-card'
 @import '../components/widget/basic-card'
+@import '../components/pagination'
 @import '../components/plugins/back_to_top'
 @import '../components/button'
 @import '../components/footer'
